--- a/DhaliProcurement/Web.config
+++ b/DhaliProcurement/Web.config
@@ -32,7 +32,8 @@
       </providers>
     </roleManager>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+    <!--<forms loginUrl="~/Account/Login" timeout="2880" /> -->
+      <forms loginUrl="~/Account/Login"/>
     </authentication>
   </system.web>
   <system.webServer>
